--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11169,7 +11169,7 @@ body.gallery-expand {
 .btn_position_5{
 	right:100px;
 }
-.btn_delete,.btn_slide_down{
+.btn_delete,.btn_slide_down,.book_btn_slide_down{
 	padding: 0 0 1px;
 	visibility:hidden;
 }
@@ -11263,7 +11263,7 @@ a.checked button{
 #select_notebook a,#select_note a{
 	cursor:default;
 }
-.note_menu{
+.note_menu,.book_note_menu{
 	position:absolute;
 	right:0;
 	z-index:99;
@@ -11275,9 +11275,16 @@ a.checked button{
 .note_menu dl{
 	margin:0 0 10px;
 }
+.book_note_menu dl{
+  margin:0 0 10px;
+}
 .note_menu:hover{
 	outline:1px solid #0E7D76;
 	display:block;
+}
+.book_note_menu:hover{
+  outline:1px solid #0E7D76;
+  display:block;
 }
 .note_menu_show{
 	display:block;
@@ -11288,6 +11295,13 @@ a.checked button{
 	position:relative;
 	visibility:visible;
 }
+
+.book_note_menu .btn_delete,.btn_share{
+  padding:0 5px 1px;
+  left:8px;
+  position:relative;
+  visibility:visible;
+}
 .btn_move{
 	padding:1px 3.5px 0;
 }
@@ -11296,6 +11310,9 @@ a.checked button{
 }
 .note_menu dt{
 	padding:5px 0 0 0;
+}
+.book_note_menu dt{
+  padding:5px 0 0 0;
 }
 #more_note,#more_activity_note{
 	height:31px;
